<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scv_env_bottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/frame">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgv_albumart"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_error"></ImageView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edt_filipath"
                    android:textColor="#646464"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtv_filepath"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="/mnt/sdcard"
                    android:textColor="#646464"
                    android:textSize="12dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_artist_label"
                    android:textSize="12dp" />

                <EditText

                    android:id="@+id/edt_artist"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_artist" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_album_label"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_album"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_album" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_genre_label"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_genre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_genre" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_song_label"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_sone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_song" />
            </LinearLayout>
            <!--
                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/edit_year_label"
                                android:textSize="12dp" />

                            <EditText
                                android:id="@+id/edt_year"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_year"
                                android:inputType="number" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:text="@string/edit_trackcount_label"
                                android:textSize="12dp" />

                            <EditText
                                android:id="@+id/edt_trackcount"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_trackcount"
                                android:inputType="number" />
                        </LinearLayout>-->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_track_label"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/edt_disknumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_track"
                    android:inputType="number" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"></View>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"></FrameLayout>
</RelativeLayout>